# soteria-fs

./: .gitignore  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml  rust.yml
config/: soteria.toml
desktop/: Cargo.toml  index.html  package.json  tailwind.config.js
desktop/src/: App.tsx  app.rs  core.rs  dashboard.rs  main.rs  setup.rs  style.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/: Dashboard.tsx  KeyManager.tsx  Recovery.tsx  SecurityPanel.tsx  SettingsPage.tsx  VolumeManager.tsx
desktop/src/lib/: commands.ts
desktop/src/styles/: globals.css
docs/: CRYPTO-INVENTORY.md  FDE-ARCHITECTURE.md  FIPS-SECURITY-POLICY.md  PBA.md  SECURITY-AUDIT-PREP.md  SOTERIA-OMEGA-ARCHITECTURE.md  TCB.md  THREAT-MODEL.md  architecture.md  crypto_notes.md  faq.md  getting-started.md  security-audit-checklist.md  threat_model.md
installer/: Cargo.toml  build.rs
installer/src/: checks.rs  install.rs  main.rs  ui.rs
packaging/linux/: build-packages.sh
packaging/linux/systemd/: soteria.service
packaging/linux/udev/: 70-soteria-tpm.rules
packaging/macos/: build-dmg.sh  entitlements.plist
packaging/portable/: pack.ps1  stage.ps1
packaging/windows/: build-msix.ps1
packaging/windows/AppxManifest/: AppxManifest.xml
ruby/: Gemfile  Rakefile  soteria.gemspec
ruby/lib/: soteria.rb
ruby/lib/soteria/: admin.rb  config.rb  core_bridge.rb  installer.rb  system_check.rb  version.rb  volume.rb
ruby/lib/soteria/gui/: app.rb  setup_wizard.rb
ruby/spec/: config_spec.rb  installer_spec.rb  soteria_spec.rb  spec_helper.rb  system_check_spec.rb
rust-core/: Cargo.toml  build.rs
rust-core/benches/: crypto_bench.rs
rust-core/fuzz/: Cargo.toml
rust-core/fuzz/fuzz_targets/: fuzz_aead_roundtrip.rs  fuzz_block_lineage.rs  fuzz_hex_decode.rs  fuzz_hex_parse.rs  fuzz_lineage_prev_salt.rs  fuzz_share_parse.rs  fuzz_wal_parse.rs
rust-core/src/: api.rs  config.rs  daemon.rs  enterprise.rs  erasure_coding.rs  lib.rs  main.rs  metadata_encryption.rs  secure_erase.rs
rust-core/src/advanced/: chameleon.rs  mirage_fs.rs  mod.rs  obsidian.rs
rust-core/src/ai_observer/: mod.rs  readonly.rs
rust-core/src/anti_forensic/: entropy_pad.rs  header_scatter.rs  mod.rs  temporal_erase.rs  timestamp_warp.rs
rust-core/src/crypto_engine/: aead.rs  block.rs  dsa.rs  kdf.rs  mod.rs  nonce.rs  pq.rs  secure_box.rs  shares.rs  xts.rs
rust-core/src/crypto_engine/fips/: cavp.rs  integrity.rs  kat.rs  mod.rs  primitives.rs
rust-core/src/deception/: decoy_content.rs  mod.rs  rate_grief.rs  recursive_hell.rs
rust-core/src/deception_layer/: honey_fs.rs  honeypot.rs  mod.rs
rust-core/src/defense/: constant_time.rs  mod.rs  shamir_recovery.rs  tool_confusion.rs
rust-core/src/event_bus/: bus.rs  event.rs  mod.rs
rust-core/src/fde/: block_device.rs  gcm_sector.rs  hidden.rs  hw_erase.rs  mod.rs  pba.rs  persistent.rs  shamir.rs  tpm_seal.rs  volume.rs
rust-core/src/fs_layer/: durability.rs  fuse_fs.rs  fuse_hardening.rs  kdf.rs  metadata.rs  mod.rs  region.rs  sandbox.rs  storage.rs  wal.rs
rust-core/src/intrusion/: crypto_eraser.rs  forensic_mirror.rs  honeytokens.rs  intent_verify.rs  mod.rs  threat_matrix.rs
rust-core/src/key_hierarchy/: mod.rs  slots.rs
rust-core/src/key_manager/: capability.rs  lifecycle.rs  mod.rs  ratchet.rs  tpm_keyring.rs
rust-core/src/omega/: classification.rs  comsec.rs  crypto_process.rs  emergency.rs  init_flow.rs  integrity.rs  mod.rs  sovereignty.rs  tempest.rs  two_person.rs
rust-core/src/omega/defense/: mod.rs
rust-core/src/omega/hardware/: mod.rs
rust-core/src/policy/: audit_log.rs  mod.rs  revocation.rs
rust-core/src/response_engine/: actions.rs  mod.rs  policy.rs
rust-core/src/security/: canary.rs  detector.rs  mod.rs
rust-core/src/sensors/: entropy_sensor.rs  key_access_sensor.rs  mod.rs  process_sensor.rs  write_sensor.rs
rust-core/src/simulation/: mod.rs  ransomware_sim.rs
rust-core/src/snapshot_engine/: chain.rs  cow.rs  mod.rs  rollback.rs
rust-core/src/tpm/: hardware.rs  interface.rs  mod.rs  software.rs
rust-core/src/tui/: app.rs  dashboard.rs  events_view.rs  keys_view.rs  mod.rs  recovery_view.rs  threats_view.rs
rust-core/tests/: audit_log.rs  binary_volume.rs  capability.rs  cli.rs  config_and_policy.rs  crypto_aead.rs  crypto_block.rs  defense_layers.rs  fde_integration.rs  fuse_e2e.rs  kdf.rs  pq.rs  property_tests.rs  shares.rs  storage_layer.rs  wal.rs
scripts/: audit-repro.sh  package.rb  release.sh
tests/: e2e_placeholder.rs
ui/: Gemfile  app.rb  config.ru
ui/lib/: api_client.rb
ui/public/css/: app.css
ui/views/dashboard/: index.erb
ui/views/domains/: index.erb
ui/views/installer/: deploy.erb  done.erb  mode.erb  preview.erb  recovery.erb  scan.erb  welcome.erb
ui/views/keys/: index.erb  share.erb
ui/views/layouts/: application.erb
ui/views/learning/: index.erb  topic.erb
ui/views/recovery/: index.erb
ui/views/settings/: index.erb
ui/views/threats/: index.erb
