[package]
name = "soteria-desktop"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Soteria Aegis — native desktop application"

[[bin]]
name = "SoteriaAegis"
path = "src/main.rs"

[dependencies]
soteria-core = { path = "../rust-core" }
eframe = "0.30"
egui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
dirs = "5.0"
blake3 = "1.5"
