[package]
name = "soteria-installer"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Soteria Aegis installer"
build = "build.rs"

[[bin]]
name = "SoteriaAegis-Setup"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
colored = "2.1"
dirs = "5.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.52"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["user"] }
