[package]
name = "soteria-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
soteria-core = { path = "../../rust-core" }

[features]
default = []
tpm = ["soteria-core/tpm"]
